syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";
import "QueryHeader.proto";
import "ResponseHeader.proto";
import "Timestamp.proto";

/* Represents an NFT on the Ledger */
message NftID {
    TokenID tokenID = 1; // The (non-fungible) token of which this NFT is an instance
    int64 serialNumber = 2; // The unique identifier of this instance
}

/* Applicable only to tokens of type NON_FUNGIBLE_UNIQUE. Gets info on a NFT for a given TokenID (of type NON_FUNGIBLE_UNIQUE) and serial number */
message TokenGetNftInfoQuery {
    QueryHeader header = 1; // Standard info sent from client to node, including the signed payment, and what kind of response is requested (cost, state proof, both, or neither).
    NftID nftID = 2; // The ID of the NFT
}

message TokenNftInfo {
    NftID nftID = 1; // The ID of the NFT
    AccountID accountID = 2; // The current owner of the NFT
    Timestamp creationTime = 3; // The effective consensus timestamp at which the NFT was minted
    bytes metadata = 4; // Represents the unique metadata of the NFT
}

message TokenGetNftInfoResponse {
    ResponseHeader header = 1; // Standard response from node to client, including the requested fields: cost, or state proof, or both, or neither
    TokenNftInfo nft = 2; // The information about this NFT
}
